Fix text shadow opacity on Safari only.

--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -4,8 +4,7 @@
       1px 2px 0 var(--yellow-600),
       1px 3px 0 var(--yellow-600),
       1px 4px 0 var(--yellow-700),
-      0 1px 25px hsla(0, 0%, 0%, 0.42),
-      2px 5px 3px hsla(0, 0%, 0%, 0.67);
+      2px 5px 5px hsla(0, 0%, 0%, 0.5);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,8 +13,18 @@
     1px 2px 0 var(--yellow-600),
     1px 3px 0 var(--yellow-600),
     1px 4px 0 var(--yellow-700),
-    0 1px 13px hsla(0, 0%, 0%, 0.25),
-    2px 5px 3px hsla(0, 0%, 0%, 0.33);
+    2px 5px 5px hsla(0, 0%, 0%, 0.33);
+  }
+}
+
+@supports (-webkit-hyphens: none) {
+  .textShadow {
+    text-shadow:
+        1px 1px 0 var(--yellow-300),
+        1px 2px 0 var(--yellow-600),
+        1px 3px 0 var(--yellow-600),
+        1px 4px 0 var(--yellow-700),
+        2px 5px 5px hsla(0, 0%, 0%, 0.2);
   }
 }
 
